--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Honk&family=Moirai+One&display=swap" rel="stylesheet">
@@ -30,8 +33,8 @@
         <h1 class="animate__bounce">YOUSSEF KANDEEL</h1>
         <ul>
             <li><a href="#about">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <div class="container ">
@@ -51,6 +54,33 @@
         <div class="IMG-div animate__animated animate__tada  ">
             <img src="./images/sss.jpg" alt="">
         </div>
+    </div>
+    <div  class="projects container" id="projects">
+        <hr>
+        <h1>Projects</h1>
+        <div class="projects-container">
+            <div class = "card">
+                <img src="./images/facerecoScreenShot.png" alt="">
+                <div class="card-content">
+                  <h2>
+                    Full stack Face Recognition app
+                  </h2>
+                  <p>
+                    A full-stack React app with face recognition and a login system, integrated with a database and utilizing the Clarifai API for image description and face recognition.
+                  </p>
+                    <a href="https://github.com/kandeel679/Face_recognition_frontEnd" target="_blank" class="utton">
+                        View
+                    </a>
+                </div>
+              </div>
+
+        </div>
+
+    </div>
+    <div id="contact" class="contact container">
+        <hr>
+        <h1>Contact</h1>
+        <p>Feel free to reach me at <a href="mailto:youssifk000@gmail.com">youssifk000@gmail.com</a>. You can also find me on <a href="https://github.com/kandeel679" target="_blank" >Github</a>, <a href="https://www.linkedin.com/in/youssef-kandeel-12a508263/" target="_blank">Linkedin</a> and <a href="https://www.instagram.com/kandeel.33" target="_blank">Instagram (kandeel.33)</a>.</p>
     </div>
 
 </body>
