--- a/index.html
+++ b/index.html
@@ -39,23 +39,52 @@
     </nav>
     <div class="container ">
         <div id="about" class="about-text ">
-            <h2>Hello! i'm Youssef Kandeel, a <span id="dev">developer</span> based in Egypt </h2>
-            <p>A <span id="cs">2nd-year Computer Science student at AASTMT</span> (Arab Academy for Science, Technology & Maritime Transport). Over the past 6 months, I've been submerging myself in the world of web development, delving into both the <span id="frontEnd">front-end</span> and <span id="backEnd">back-end</span> aspects.</p>
+            <!-- 👋 Hello! I’m Youssef Kandeel — a cybersecurity enthusiast and developer based in Egypt -->
+            <h2>👋 Hello! I’m Youssef Kandeel — a <span id="cy">Cybersecurity</span> and <span id="dev">Developer</span> based in Egypt </h2>
+            <br>
+
+            <p>As a <span id="cs">3rd-year Computer Science student at AASTMT</span>, I specialize in Cybersecurity, with hands-on experience in penetration testing, vulnerability exploitation, and defensive security. </p>
+            <p>I hold certifications like <span id="googlecert">Google Cybersecurity</span> and <span id="THMcert">Jr Penetration Tester</span> from THM, and I’ve successfully exploited SQLi, XSS, and CSRF vulnerabilities in real-world scenarios.</p>
+            <p>I’ve solved <span id="ctf"> 40+ CTF</span> challenges on TryHackMe, gaining expertise in Linux privilege escalation, network analysis, and exploit development. Experience with tools like Burp Suite, John the Ripper, and Postman, I’m passionate about identifying vulnerabilities and building secure systems.</p>
+            <p>🔍Looking For: <span id="internships">Internships</span> or <span id="jobs">entry-level roles</span> in cybersecurity, including penetration testing, red teaming, and security research. Let’s connect and build a safer digital world!</p>
+            <!-- <p>A <span id="cs">2nd-year Computer Science student at AASTMT</span> (Arab Academy for Science, Technology & Maritime Transport). Over the past 6 months, I've been submerging myself in the world of web development, delving into both the <span id="frontEnd">front-end</span> and <span id="backEnd">back-end</span> aspects.</p>
             <p>I'm currently pursuing my Computer Science degree at AASTMT, where I'm gaining a strong foundation in the field and staying updated with the latest technologies.</p>
             <p>I thrive on creating impactful web applications that solve real problems, turning ideas into <span id="userF">user-friendly solutions.</span></p>
-            <p>I'm currently looking for new opportunities as a developer, including both <span id="dev2">traditional </span> roles and <span id="freelance">freelance projects.</span></p>
-            <button class="button" > 
+            <p>I'm currently looking for new opportunities as a developer, including both <span id="dev2">traditional </span> roles and <span id="freelance">freelance projects.</span></p> -->
+
+        <div class="btn-container">
+
+            <button class="button1" > 
                 <a href="https://github.com/kandeel679" target="_blank">
                     <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-width="0" id="SVGRepo_bgCarrier"></g><g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier"> <title>github</title> <rect fill="none" height="24" width="24"></rect> <path d="M12,2A10,10,0,0,0,8.84,21.5c.5.08.66-.23.66-.5V19.31C6.73,19.91,6.14,18,6.14,18A2.69,2.69,0,0,0,5,16.5c-.91-.62.07-.6.07-.6a2.1,2.1,0,0,1,1.53,1,2.15,2.15,0,0,0,2.91.83,2.16,2.16,0,0,1,.63-1.34C8,16.17,5.62,15.31,5.62,11.5a3.87,3.87,0,0,1,1-2.71,3.58,3.58,0,0,1,.1-2.64s.84-.27,2.75,1a9.63,9.63,0,0,1,5,0c1.91-1.29,2.75-1,2.75-1a3.58,3.58,0,0,1,.1,2.64,3.87,3.87,0,0,1,1,2.71c0,3.82-2.34,4.66-4.57,4.91a2.39,2.39,0,0,1,.69,1.85V21c0,.27.16.59.67.5A10,10,0,0,0,12,2Z"></path> </g></svg>
                    View Github 
                 </a> 
             </button>
+            
+            <!-- From Uiverse.io by Yaya12085 --> 
+            <button class="button"> 
+                <a href="https://www.linkedin.com/in/youssef-kandeel/" target="_blank">
+                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#ffffff" d="M12.225 12.225h-1.778V9.44c0-.664-.012-1.519-.925-1.519-.926 0-1.068.724-1.068 1.47v2.834H6.676V6.498h1.707v.783h.024c.348-.594.996-.95 1.684-.925 1.802 0 2.135 1.185 2.135 2.728l-.001 3.14zM4.67 5.715a1.037 1.037 0 01-1.032-1.031c0-.566.466-1.032 1.032-1.032.566 0 1.031.466 1.032 1.032 0 .566-.466 1.032-1.032 1.032zm.889 6.51h-1.78V6.498h1.78v5.727zM13.11 2H2.885A.88.88 0 002 2.866v10.268a.88.88 0 00.885.866h10.226a.882.882 0 00.889-.866V2.865a.88.88 0 00-.889-.864z"></path></g></svg>
+                    View LinkedIn 
+                </a>
+            </button>
+            <button class="button" id="down" target="_blank"> 
+                <a  href="Youssef_Kandeel_Resume_CY.pdf" download="Youssef_Kandeel_Resume_CY.pdf">
+                    Download Resume
+                </a>
+            </button>
+
         </div>
+
+        </div>
+        
         <div class="IMG-div animate__animated animate__tada  ">
             <img src="./images/sss.jpg" alt="">
         </div>
     </div>
-    <div  class="projects container" id="projects">
+
+    <!-- Projects old container  -->
+    <!-- <div  class="projects container" id="projects">
         <hr>
         <h1>Projects</h1>
         <div class="projects-container">
@@ -76,11 +105,11 @@
 
         </div>
 
-    </div>
+    </div> -->
     <div id="contact" class="contact container">
         <hr>
         <h1>Contact</h1>
-        <p>Feel free to reach me at <a href="mailto:youssifk000@gmail.com">youssifk000@gmail.com</a>. You can also find me on <a href="https://github.com/kandeel679" target="_blank" >Github</a>, <a href="https://www.linkedin.com/in/youssef-kandeel-12a508263/" target="_blank">Linkedin</a> and <a href="https://www.instagram.com/kandeel.33" target="_blank">Instagram (kandeel.33)</a>.</p>
+        <p>Feel free to reach me at <a href="mailto:youssefkandeel16@gmail.com">youssefkandeel16@gmail.com</a>.
     </div>
 
 </body>
