--- a/project-details.html
+++ b/project-details.html
@@ -21,6 +21,8 @@
         <ul>
             <li><a href="index.html#about">About</a></li>
             <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="#blog">Blog</a></li>
+
             <li><a href="index.html#contact">Contact</a></li>
         </ul>
     </nav>
