--- a/all-blogs.html
+++ b/all-blogs.html
@@ -42,11 +42,15 @@
   <body>
     <nav>
       <h1>YOUSSEF KANDEEL</h1>
-      <ul>
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="nav-links">
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#projects">Projects</a></li>
         <li><a href="#blog">Blog</a></li>
-
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
     </nav>
@@ -74,6 +78,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./scripts/script.js"></script>
     <script>
       async function loadBlogPosts() {
         try {
@@ -81,6 +86,7 @@
           const data = await response.json();
 
           const blogGrid = document.getElementById("blog-grid");
+          console.log(data.posts);
 
           data.posts.forEach((post) => {
             blogGrid.innerHTML += createBlogCard(post);
