--- a/all-projects.html
+++ b/all-projects.html
@@ -1,92 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="./images/jellyfish-samsung.png" type="image/png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/jellyfish-samsung.png" type="image/png" />
     <title>All Projects - Kandeel</title>
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/project-details.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Honk&family=Moirai+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Khand:wght@300;400;500;600;700&family=Lobster&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/project-details.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Honk&family=Moirai+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Khand:wght@300;400;500;600;700&family=Lobster&family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav>
-        <h1>YOUSSEF KANDEEL</h1>
-        <ul>
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="index.html#projects">Projects</a></li>
-            <li><a href="#blog">Blog</a></li>
-
-            <li><a href="index.html#contact">Contact</a></li>
-        </ul>
+      <h1>YOUSSEF KANDEEL</h1>
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#projects">Projects</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
     </nav>
 
     <div class="projects container" id="projects">
-        <a href="index.html#projects" class="back-button">
-            ← Back to Projects
-        </a>
-        <hr>
-        <h1>All Projects</h1>
-        <!-- Featured Projects -->
-        <div class="projects-section">
-            <h2>Featured Project</h2>
-            <div class="projects-grid" id="featured-projects">
-                <!-- Featured projects will be loaded here -->
-            </div>
+      <a href="index.html#projects" class="back-button"> ← Back to Projects </a>
+      <hr />
+      <h1>All Projects</h1>
+      <!-- Featured Projects -->
+      <div class="projects-section">
+        <h2>Featured Project</h2>
+        <div class="projects-grid" id="featured-projects">
+          <!-- Featured projects will be loaded here -->
         </div>
+      </div>
 
-        <!-- Recent Projects -->
-        <div class="projects-section">
-            <h2>Recent Projects</h2>
-            <div class="projects-grid" id="recent-projects">
-                <!-- Recent projects will be loaded here -->
-            </div>
+      <!-- Recent Projects -->
+      <div class="projects-section">
+        <h2>Recent Projects</h2>
+        <div class="projects-grid" id="recent-projects">
+          <!-- Recent projects will be loaded here -->
         </div>
-
+      </div>
     </div>
 
     <div id="contact" class="contact container">
-        <hr>
-        <p>Feel free to reach me at <a href="mailto:youssefkandeel16@gmail.com">youssefkandeel16@gmail.com</a>.
+      <hr />
+      <p>
+        Feel free to reach me at
+        <a href="mailto:youssefkandeel16@gmail.com"
+          >youssefkandeel16@gmail.com</a
+        >.
+      </p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="./scripts/script.js"></script>
     <script>
-        async function loadAllProjects() {
-            try {
-                const response = await fetch('./JSON/projects.json');
-                const data = await response.json();
+      async function loadAllProjects() {
+        try {
+          const response = await fetch("./JSON/projects.json");
+          const data = await response.json();
 
-                const featuredContainer = document.getElementById('featured-projects');
-                data.featured.forEach(project => {
-                    featuredContainer.innerHTML += createProjectCard(project);
-                });
+          const featuredContainer =
+            document.getElementById("featured-projects");
+          data.featured.forEach((project) => {
+            featuredContainer.innerHTML += createProjectCard(project);
+          });
 
-                const recentContainer = document.getElementById('recent-projects');
-                data.recent.forEach(project => {
-                    recentContainer.innerHTML += createProjectCard(project);
-                });
-
-            } catch (error) {
-                console.error('Error loading projects:', error);
-            }
+          const recentContainer = document.getElementById("recent-projects");
+          data.recent.forEach((project) => {
+            recentContainer.innerHTML += createProjectCard(project);
+          });
+        } catch (error) {
+          console.error("Error loading projects:", error);
         }
+      }
 
-        function createProjectCard(project) {
-            return `
+      function createProjectCard(project) {
+        return `
                 <div class="project-card">
                     <img src="${project.image}" alt="${project.title}">
                     <div class="content">
@@ -96,9 +124,9 @@
                     </div>
                 </div>
             `;
-        }
+      }
 
-        document.addEventListener('DOMContentLoaded', loadAllProjects);
+      document.addEventListener("DOMContentLoaded", loadAllProjects);
     </script>
-</body>
+  </body>
 </html>
