editing project-details

--- a/project-details.html
+++ b/project-details.html
@@ -58,12 +58,14 @@
           </div>
         </div>
 
-        <img
-          src="./images/facerecoScreenShot.png"
-          alt="Project Screenshot"
-          class="project-image"
-          id="projectImage"
-        />
+        <div class="project-image-container">
+          <img
+            src="./images/facerecoScreenShot.png"
+            alt="Project Screenshot"
+            class="project-image"
+            id="projectImage"
+          />
+        </div>
 
         <div class="project-section">
           <h2 class="section-title">Overview</h2>
@@ -99,9 +101,7 @@
             user sessions.
           </p>
         </div>
-      </div>
 
-      <div class="project-sidebar">
         <div class="project-section">
           <h2 class="section-title">Technical Stack</h2>
           <div class="tech-stack" id="projectStack">
@@ -120,10 +120,9 @@
             href="https://github.com/kandeel679/Face_recognition_frontEnd"
             target="_blank"
             class="project-link github-link"
-            style="text-decoration: none; color: rgb(255, 255, 255)"
           >
             <svg
-              fill="#000000"
+              fill="#ffffff"
               height="24"
               width="24"
               xmlns="http://www.w3.org/2000/svg"
